@@ -21,7 +21,7 @@
  * @author Oliver Klee <typo3-coding@oliverklee.de>
  * @author Niels Pardon <mail@niels-pardon.de>
  */
-class tx_seminars_BagBuilder_Event extends tx_seminars_BagBuilder_Abstract {
+class tx_seminars_BagBuilder_Event extends Tx_Seminars_BagBuilder_Abstract {
 	/**
 	 * @var string class name of the bag class that will be built
 	 */
