@@ -20,7 +20,7 @@
  *
  * @author Niels Pardon <mail@niels-pardon.de>
  */
-class tx_seminars_BagBuilder_Organizer extends tx_seminars_BagBuilder_Abstract {
+class tx_seminars_BagBuilder_Organizer extends Tx_Seminars_BagBuilder_Abstract {
 	/**
 	 * @var string class name of the bag class that will be built
 	 */
